# hri_person_manager

./: .clang-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg
doc/: ALGORITHM.md
hri_person_manager/: show_humans_graph.py
include/hri_person_manager/: managed_person.hpp  node_person_manager.hpp  person_matcher.hpp
launch/: person_manager.launch.py
scripts/: impl.py  impl_old.py  show_humans_graph.py  utils.py
src/: hri_person_manager.cpp  main.cpp  managed_person.cpp  managed_person.h  mermaid.cpp  person_matcher.cpp  person_matcher.h
src/hri_person_manager/: managed_person.cpp  node_person_manager.cpp  person_matcher.cpp
test/: mermaid.cpp  test-graphs.md  test_hri_person_manager.cpp  test_hri_person_manager.test  test_node_person_manager.cpp  test_person_matcher.cpp
test/mermaid_tests_data/: long_sequence.md  not_so_tricky.md  real_world_1.md  real_world_2.md
