<?xml version="1.0"?>
<package format="3">
  <name>hri_person_manager</name>
  <version>0.1.0</version>
  <description>Combines information about people's face, body, voice into on consistent representation, following the ROS4HRI conventions</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hri_person_manager</url> -->


  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>hri</depend>
  <depend>tf2_ros</depend>
  <depend>hri_msgs</depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
